--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "side-project",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
+    "start:dev": "nodemon ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +12,21 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "morgan": "^1.9.1"
-  }
+    "morgan": "^1.9.1",
+    "pg": "^7.7.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.41.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.7"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CS601-F18/side-project-Ni4991.git"
+  },
+  "bugs": {
+    "url": "https://github.com/CS601-F18/side-project-Ni4991/issues"
+  },
+  "homepage": "https://github.com/CS601-F18/side-project-Ni4991#readme",
+  "description": ""
 }
